Fix: eliminación de @CrossOrigin y CORS limpio en controladores